@@ -1,3 +1,8 @@
+2019-09-30  Niels Möller  <nisse@lysator.liu.se>
+
+	* tests/t-gcd.c (gcdext_valid_p): Stricter checks for gcdext
+	corner cases.
+
 2018-11-07 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mini-gmp/mini-gmp.c: Silence a couple of warnings.
